tests/neg/runtimeNames.jo
import stk.runtime.JS    // error

def main = JS.print "hello\n"  // error // error
